// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReduxModule-basic subscribeToName works 1`] = `
<p>
  Hello there, 
  Alice
  ! Click to change me.
</p>
`;

exports[`createReduxModule-basic subscribeToName works 2`] = `
<p>
  Hello there, 
  Shane
  ! Click to change me.
</p>
`;

exports[`reducers mode - username subscribeToName works 1`] = `
<p>
  Hello there, 
  Alice
  ! Click to change me.
</p>
`;

exports[`reducers mode - username subscribeToName works 2`] = `
<p>
  Hello there, 
  Shane
  ! Click to change me.
</p>
`;
